--- a/package.json
+++ b/package.json
@@ -1,3 +1,21 @@
 {
-    "name": "chat-one"
+	"name": "chat-one",
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@tailwindcss/postcss": "^4.1.3",
+		"next": "^15.2.5",
+		"postcss": "^8.5.3",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwindcss": "^4.1.3"
+	},
+	"devDependencies": {
+		"@types/node": "22.14.0",
+		"@types/react": "19.1.0",
+		"typescript": "5.8.3"
+	}
 }
