--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,9 @@
-# EditorConfig is awesome: https://editorconfig.org
-
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
+indent_style = space
+indent_size = 2
+charset = utf-8
 end_of_line = lf
+trim_trailing_whitespace = true
 insert_final_newline = true
-
