--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-	"name": "chat-one",
+	"name": "ai-weekly",
+	"description": "AI Weekly AI周刊 周报",
 	"scripts": {
-		"dev": "next dev --turbo",
-		"build": "next build",
-		"start": "next start"
-	},
+    "dev": "slidev --open",
+    "build": "slidev build",
+    "export": "slidev export"
+  },
 	"dependencies": {
-		"@tailwindcss/postcss": "^4.1.3",
-		"next": "^15.2.5",
-		"postcss": "^8.5.3",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"tailwindcss": "^4.1.3"
-	},
-	"devDependencies": {
-		"@types/node": "22.14.0",
-		"@types/react": "19.1.0",
-		"typescript": "5.8.3"
+		"@slidev/cli": "^51.6.0",
+		"@slidev/theme-default": "^0.25.0",
+		"@slidev/theme-seriph": "^0.25.0",
+		"vue": "^3.5.13"
 	}
 }
