--- a/package.json
+++ b/package.json
@@ -1,15 +1,4 @@
 {
-	"name": "ai-weekly",
-	"description": "AI Weekly AI周刊 周报",
-	"scripts": {
-    "dev": "slidev --open",
-    "build": "slidev build",
-    "export": "slidev export"
-  },
-	"dependencies": {
-		"@slidev/cli": "^51.6.0",
-		"@slidev/theme-default": "^0.25.0",
-		"@slidev/theme-seriph": "^0.25.0",
-		"vue": "^3.5.13"
-	}
+	"name": "ai-daily",
+	"description": "AI Weekly AI周刊 周报 日报 周报"
 }
